# Android-CPU-Render-Template

./: CMakeLists.txt  LICENSE  README-cn.md  README.md
src/: main.cpp
src/AndroidRender/: AndroidRender.cpp  AndroidRender.h
src/Config/: UserConfig.cpp  UserConfig.h
src/DrawManager/: DrawManager.cpp  DrawManager.h
src/Menu/: Menu.cpp  Menu.h
